force-app/main/default/objects/Notification_SLA__c/Notification_SLA__c.object-meta.xml
<CustomObject>
    <label>Notification SLA</label>
    <nameField>
        <label>Notification SLA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification SLAs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>