force-app/main/default/objects/Notification_SLA__c/fields/Notification_Group__c.field-meta.xml
<CustomField>
    <fullName>Notification_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Group</label>
    <referenceTo>Notification_Group__c</referenceTo>
    <relationshipLabel>Notification Group SLAs</relationshipLabel>
    <relationshipName>NotificationGroup_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>