force-app/main/default/objects/Notification_SLA__c/fields/Notification_Process__c.field-meta.xml
<CustomField>
    <fullName>Notification_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Process</label>
    <referenceTo>Notification_Process__c</referenceTo>
    <relationshipLabel>Notification Process SLAs</relationshipLabel>
    <relationshipName>NotificationProcess_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>