force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Check_Final__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Check_Final__c</fullName>
    <formula>AND (
 ISBLANK( Notification_SLA_Date_End__c ),
 Notification_SLA_Has_Final__c,
 Notification_SLA_Date_Expected__c -  TODAY() =  $CustomMetadata.Notification_SLA_Setting__mdt.Notification_Last.Notification_Days__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification SLA Check Final</label>
    <type>Checkbox</type>
</CustomField>