force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Check_First__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Check_First__c</fullName>
    <formula>AND (
ISBLANK( Notification_SLA_Date_End__c ),
Notification_SLA_Has_First__c ,
Notification_SLA_Date_Expected__c - TODAY() =  $CustomMetadata.Notification_SLA_Setting__mdt.Notificacion_First.Notification_Days__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification SLA Check First</label>
    <type>Checkbox</type>
</CustomField>