force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Date_End__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Date_End__c</fullName>
    <label>Notification SLA Date End</label>
    <type>Date</type>
</CustomField>