force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Date_Expected__c</fullName>
    <label>Notification SLA Date Expected</label>
    <type>Date</type>
</CustomField>