force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Date_Start__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Notification SLA Date Start</label>
    <type>Date</type>
</CustomField>