force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Has_Final__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Has_Final__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification SLA Has Final</label>
    <type>Checkbox</type>
</CustomField>