force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Progress__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Progress__c</fullName>
    <formula>( (  NULLVALUE( Notification_SLA_Date_End__c , TODAY()) -  Notification_SLA_Date_Start__c ) / ( Notification_SLA_Date_Expected__c -  Notification_SLA_Date_Start__c ) ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification SLA Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>