force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Progress_Status__c</fullName>
    <formula>IMAGE
(
IF(
AND( Notification_SLA_Progress__c &gt;=0, Notification_SLA_Progress__c &lt;80 ),&quot;/img/samples/flag_green.gif&quot;, 
IF(AND(Notification_SLA_Progress__c &gt;=80, Notification_SLA_Progress__c &lt;100),&quot;/img/samples/flag_yellow.gif&quot;, 
IF(AND(Notification_SLA_Progress__c &gt;=100),&quot;/img/samples/flag_red.gif&quot;,&quot;&quot;) )
),
&quot;&quot;,15, 15
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notification SLA Progress Status</label>
    <type>Text</type>
</CustomField>