force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Type__c</fullName>
    <label>Notification SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>With Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>