force-app/main/default/objects/Notification_SLA__c/fields/Notification_SLA_Value__c.field-meta.xml
<CustomField>
    <fullName>Notification_SLA_Value__c</fullName>
    <label>Notification SLA Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>