force-app/main/default/objects/Notification_SLA__c/fields/Notification_Task__c.field-meta.xml
<CustomField>
    <fullName>Notification_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notification Task</label>
    <referenceTo>Notification_Task__c</referenceTo>
    <relationshipLabel>Notification Task SLAs</relationshipLabel>
    <relationshipName>NotificationTask_SLAs</relationshipName>
    <type>Lookup</type>
</CustomField>